- fixed auras without timers