@@ -27,7 +27,7 @@ namespace WCell.RealmServer.Entities
 			m_requiresUpdate = true;
 		}
 
-		public override UpdateFieldFlags GetVisibilityFor(Character chr)
+		public override UpdateFieldFlags GetUpdateFieldVisibilityFor(Character chr)
 		{
 			if (chr == m_owner)
 			{
