@@ -37,7 +37,7 @@ namespace WCell.RealmServer.Entities
 			get { return ObjectTypeId.Unit; }
 		}
 
-		public override UpdateFieldFlags GetVisibilityFor(Character chr)
+		public override UpdateFieldFlags GetUpdateFieldVisibilityFor(Character chr)
 		{
 			if (chr == m_master)
 			{
